@@ -258,8 +258,9 @@ New Features
     and QueryResponseTest (Shalin Shekhar Mangar via gsingers)
 
 44. SOLR-486: Binary response format, faster and smaller
-    than XML and  JSON response formats (use wt=javabin).
-    BinaryResponseParser for utilizing the binary format via SolrJ.
+    than XML and JSON response formats (use wt=javabin).
+    BinaryResponseParser for utilizing the binary format via SolrJ
+    and is now the default.
     (Noble Paul, yonik)
 
 45. SOLR-521: StopFilterFactory support for "enablePositionIncrements"
